refactor: Simplify method handling with `Method` record class, enhance processing utilities, and update project version to 6.0.2